--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ body{
     display: flex;
     background: url('../images/logo.png') no-repeat 0 0 / contain;
     min-height: 700px;
-    min-width: 1080px;
+    min-width: 1500px;
     max-width: 1920px;
     padding: 120px 20px 0 20px;
     margin: 0 auto;
@@ -143,6 +143,32 @@ body{
 .point{
     height: 330px;
 }
+.point h3{
+    font-size: 20px;
+    height: 42px;
+    color: #fff;
+}
+.point .echarts {
+    display: flex;
+    height: 240px;
+}
+.point .echarts .pie{
+    flex:2;
+    background-color: rgba(255, 255, 255, .1);
+}
+.point .echarts .data{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.point .echarts .data .item{
+    width: 50%;
+}
+.point .echarts .data span{
+    color: #4c9bfd;
+}
 
 /* 4.设备数据统计(地图)样式 */
 .map{
@@ -170,22 +196,20 @@ body{
 
 /* 8.渠道分布和一季度销售进度样式 */
 .twoInOne{
-    height: 229px;
+    display: flex;
     margin-bottom: 20px;
 }
 /* 8.1渠道分布样式 */
 .channel{
-    float: left;
+    height: 230px;
     width: 48%;
-    height: 100%;
 }
 
 /* 8.2一季度销售进度样式 */
 .quarter{
-    float: left;
     margin-left: 20px;
     width: 48%;
-    height: 100%;
+    height: 230px;
 }
 
 /* 9.全国热榜 各省热销样式 */
