--- a/css/index.css
+++ b/css/index.css
@@ -88,13 +88,12 @@ body{
     font-size: 25px;
     margin: 0 30px;
 }
-/* 标题部分样式 */
+/* 内容部分样式 */
 .monitor .title{
     display: flex;
     height: 38px;
-    margin-left: -30px;
-    margin-right: -30px;
     padding-left: 30px;
+    margin: 0 -30px;
     background-color: rgba(255, 255, 255, .1);
     align-items: center;
 }
@@ -109,22 +108,23 @@ body{
 .monitor .title span:nth-child(2){
     flex: 2;
 }
-/* 内容部分样式 */
-.monitor .content{
+.monitor .carousel{
     height: 343px;
-    color: #4396d8;
+    margin:0 -30px;
+    position: relative;
     overflow: hidden;
-    display: none;
-    margin-left: -30px;
-    margin-right: -30px;
 }
-.monitor .content.active{
-    display: block;
+.monitor .carousel ul{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
-.monitor .content li{
+.monitor .carousel li{
     display: flex;
     height: 34px;
     padding-left: 30px;
+    color: #5696e5;
     align-items: center;
 }
 .monitor .content li:hover{
