--- a/css/index.css
+++ b/css/index.css
@@ -176,10 +176,18 @@ body{
 }
 
 /*5.设备数据统计(地图)样式 */
+.total{
+    color: #fff;
+    font-size: 22px;
+}
 .map{
     height: 603px;
     margin: 0 13px;
     background-color: rgba(255, 255, 255, .1);
+}
+.geo{
+    width: 100%;
+    height: 100%;
 }
 
 /* 6.全国用户总量统计样式 */
